added breadcrums and made some ajustments

--- a/Report3/home-test/thisproject.html
+++ b/Report3/home-test/thisproject.html
@@ -45,10 +45,15 @@
 		    <div class="col-xl-0 mx-auto">
             <img  width="100%" height="30" src="img/bg-masthead.jpg" alt="">
     </div>
-	
 
-	<div style="position: absolute; top: 7rem; right:7rem;">
-		<a class="btn btn-primary" href="#" onclick="document.getElementById('id03').style.display='block'" style="width:auto;">Task List</a><br>
+	<ul class="breadcrumb">
+  		<li><a href="index.html">Home</a></li>
+  		<li><a href="myprojects.html">My Projects</a></li>
+  		<li>Project Title</li>
+	</ul>
+
+	<div style="position: absolute; top: 11rem; right:7rem;">
+		<a class="btn btn-primary" href="tasklist.html" .style.display='block'" style="width:auto;">Task List</a><br>
 		<a class="btn btn-primary" href="#" onclick="document.getElementById('id03').style.display='block'" style="width:auto;">Forum</a>
 	</div>
 
