--- a/Report3/home-test/myprojects.html
+++ b/Report3/home-test/myprojects.html
@@ -46,6 +46,11 @@
             <img  width="100%" height="30" src="img/bg-masthead.jpg" alt="">
     </div>
 	
+	<ul class="breadcrumb">
+  		<li><a href="index.html">Home</a></li>
+  		<li>My Projects</li>
+	</ul>
+
 
 	<div id="id03" class="modal" align="center">
 
@@ -79,7 +84,7 @@
 			</label>
 		</form>
 	</div>
-	<div style="position: absolute; top: 7rem; left:7rem">
+	<div style="position: absolute; top: 11rem; left:7rem">
 	<a class="btn btn-primary" href="#" onclick="document.getElementById('id03').style.display='block'" style="width:auto;">Create New Project</a>
 	</div>
 
@@ -105,11 +110,11 @@
 	<div class="card-deck">
 		<div class="card">
 			<div class="card-header">
-			<h5 class="card-title">Title of Project</h5>
+			<h5 class="card-title">Example Project</h5>
 			</div>
 			<div class="card-body">
-				<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-			<a href="#" class="btn btn-primary">Go somewhere</a>
+				<p class="card-text">This project is an example</p>
+			<a href="thisproject.html" class="btn btn-primary">Try me I do something</a>
 			</div>
 			<div class="card-footer">
 				<small class="text-muted">Last updated 3 mins ago</small>
