--- a/Report3/home-test/tasklist.html
+++ b/Report3/home-test/tasklist.html
@@ -46,7 +46,14 @@
             <img  width="100%" height="30" src="img/bg-masthead.jpg" alt="">
     </div>
 	
-    <div style="position: absolute; top: 7rem; left:7rem">
+  <ul class="breadcrumb">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="myprojects.html">My Projects</a></li>
+      <li><a href="thisproject.html">Project Title</a></li>
+      <li>Task List</li>
+  </ul>
+
+    <div style="position: absolute; top: 11rem; left:7rem">
       <a class="btn btn-primary" href="#" onclick="document.getElementById('id04').style.display='block'" style="width:auto;">Create New Task</a>
     </div>
 
@@ -82,8 +89,7 @@
     </form>
   </div>
 
-	<div style="position: absolute; top: 7rem; right:7rem;">
-		<a class="btn btn-primary" href="thisproject.html" .style.display='block'" style="width:auto;">Project</a><br>
+	<div style="position: absolute; top: 11rem; right:7rem;">
 		<a class="btn btn-primary" href="#" .style.display='block'" style="width:auto;">Forum</a>
 	</div>
 
