--- a/Report3/home-test/thisproject.html
+++ b/Report3/home-test/thisproject.html
@@ -54,7 +54,7 @@
 
 	<div style="position: absolute; top: 11rem; right:7rem;">
 		<a class="btn btn-primary" href="tasklist.html" .style.display='block'" style="width:auto;">Task List</a><br>
-		<a class="btn btn-primary" href="#" onclick="document.getElementById('id03').style.display='block'" style="width:auto;">Forum</a>
+		<a class="btn btn-primary" href="#" .style.display='block'" style="width:auto;">Forum</a>
 	</div>
 
     <section class="testimonials text-lg-left bg-light">
