--- a/Report3/home-test/index.html
+++ b/Report3/home-test/index.html
@@ -39,7 +39,7 @@
       </div>
     </nav>
   <!-- The Modal -->
-<div id="id01" class="modal">
+<div id="id01" class="modal" align="center">
   
   <form class="modal-content animate" action="/action_page.php">
     <div class="imgcontainer">
@@ -355,7 +355,7 @@
 
 
  <!-- The Modal -->
-<div id="id02" class="modal">
+<div id="id02" class="modal" align="center">
   
   <form class="modal-content animate" action="/action_page2.php">
     <div class="imgcontainer">
