--- a/Report3/home-test/thisproject.html
+++ b/Report3/home-test/thisproject.html
@@ -8,60 +8,50 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Landing Page - Start Bootstrap Theme</title>
+    <title>ProPlan</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom fonts for this template -->
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="vendor/font-awesome/css/font-awesome-popup.css" rel="stylesheet" type="text/css">
     <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
 
     <!-- Custom styles for this template -->
     <link href="css/landing-page.min.css" rel="stylesheet">
 
-
-
-    
   </head>
-  
+
   <body>
 
     <!-- Navigation -->
     <nav class="navbar navbar-light bg-light static-top">
       <div class="container">
-        <img class="img-fluid mb-2" width="50" height="50" src="img/proplanlogo.png" alt="">
+        <a class="icon" href="index.html"></a>
         <a class="navbar-brand" href="index.html">Home</a>
         <a class="navbar-brand" href="about.html">About</a>
         <a class="navbar-brand" href="projects.html">Projects</a>
         <a class="navbar-brand" href="faq.html">FAQ</a>
         <a class="navbar-brand" href="contact.html">Contact</a>
-        
-        <a class="btn btn-primary" href="#" onclick="document.getElementById('id01').style.display='block'">Sign In</a>
+        <a class="btn btn-primary" href="#" onclick="document.getElementById('id02').style.display='block'" style="width:auto;">Sign In</a>
       </div>
     </nav>
 	
 		    <div class="col-xl-0 mx-auto">
             <img  width="100%" height="30" src="img/bg-masthead.jpg" alt="">
     </div>
-
-	<ul class="breadcrumb">
-  		<li><a href="index.html">Home</a></li>
-  		<li><a href="myprojects.html">My Projects</a></li>
-  		<li>Project Title</li>
-	</ul>
-
-	<div style="position: absolute; top: 11rem; right:7rem;">
-		<a class="btn btn-primary" href="tasklist.html" .style.display='block'" style="width:auto;">Task List</a><br>
-		<a class="btn btn-primary" href="#" .style.display='block'" style="width:auto;">Forum</a>
-	</div>
-
-    <section class="testimonials text-lg-left bg-light">
+	
      	<div class="container">
-        	<h2 class="mb-5">Project Title</h2>
-        	<h5 class="mb-5">Text with the description of the project</h5>
-        	<br><br><br>
+        	<br><h2 class="mb-5">Project Title</h2>
+          <h7 class="mb-5">Text with the description of the project sadsadsadsadsa ad s dsa d sad sa d sad sa d sads ad sa d sad sa dsa sa</h7>
+        	<br><br>
+
+  <div>
+    <a class="btn btn-primary" href="#" onclick="document.getElementById('id03').style.display='block'" style="width:auto;">Task List</a>&ensp;&ensp;
+    <a class="btn btn-primary" href="#" onclick="document.getElementById('id03').style.display='block'" style="width:auto;">Forum</a>
+  </div><br><br>
 
         	<h4 class="mb-5">List of Contributors</h4>
 
@@ -92,28 +82,21 @@
 						</div>
 				</div>
 			</div><br>	
-		<section align="center">
-    		<div class="pagination" >
+		<section align="center"><h4>
+    		<div class="text-center " >
   				<a href="#">&laquo;</a>
-  				<a href="#">1</a>
-  				<a class="active" href="#">2</a>
-  				<a href="#">3</a>
-  				<a href="#">4</a>
-  				<a href="#">5</a>
-  				<a href="#">6</a>
-  				<a href="#">&raquo;</a>
-			</div>		
+  				&ensp;<a href="#">1</a>&ensp;
+  				<a class="active" href="#">2</a>&ensp;
+  				<a href="#">3</a>&ensp;
+  				<a href="#">4</a>&ensp;
+  				<a href="#">5</a>&ensp;
+  				<a href="#">6</a>&ensp;
+  				<a href="#">&raquo;</a>&ensp;
+			</div>	</h4>	
 		</div>
     </section>
-    <p><br></br></p>
 
 </div>
-
-
-
-
-	<p><br></br></p> 
-	
 
     <!-- Footer -->
     <footer class="footer bg-light">
