--- a/Report3/home-test/myprojects.html
+++ b/Report3/home-test/myprojects.html
@@ -14,6 +14,7 @@
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom fonts for this template -->
+     <link href="vendor/font-awesome/css/font-awesome-popup.css" rel="stylesheet" type="text/css">
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
@@ -21,9 +22,6 @@
     <!-- Custom styles for this template -->
     <link href="css/landing-page.min.css" rel="stylesheet">
 
-
-
-    
   </head>
   
   <body>
@@ -31,26 +29,19 @@
     <!-- Navigation -->
     <nav class="navbar navbar-light bg-light static-top">
       <div class="container">
-        <img class="img-fluid mb-2" width="50" height="50" src="img/proplanlogo.png" alt="">
+        <a class="icon" href="index.html"></a>
         <a class="navbar-brand" href="index.html">Home</a>
         <a class="navbar-brand" href="about.html">About</a>
         <a class="navbar-brand" href="projects.html">Projects</a>
         <a class="navbar-brand" href="faq.html">FAQ</a>
         <a class="navbar-brand" href="contact.html">Contact</a>
         
-        <a class="btn btn-primary" href="#" onclick="document.getElementById('id01').style.display='block'">Sign In</a>
-      </div>
+        <a class="btn btn-primary" href="#" onclick="document.getElementById('id02').style.display='block'">Sign In</a>
     </nav>
-	
-		    <div class="col-xl-0 mx-auto">
+
+      <div class="col-xl-0 mx-auto">
             <img  width="100%" height="30" src="img/bg-masthead.jpg" alt="">
     </div>
-	
-	<ul class="breadcrumb">
-  		<li><a href="index.html">Home</a></li>
-  		<li>My Projects</li>
-	</ul>
-
 
 	<div id="id03" class="modal" align="center">
 
@@ -60,32 +51,29 @@
 		 		</span>
 	    	</div>
 
-		 	<div class="container">
-		 		<label for="title"><b>Project Title</b></label>
-				<input type="text" placeholder="Enter Project Title" name="title" required><br>
 
-				<label for="pdis"><b>Project Description</b></label>
-				<textarea placeholder="Project Description" name="description" rows="10" cols="50"></textarea><br>
+<div class="container">
+		<label for="title"><b>Project Title</b></label>
+		<input type="text" placeholder="Enter Project Title" name="title" required><br><br>
+		<label for="pdis"><b>Project Description</b></label><br><br>
+		<textarea placeholder="Project Description" name="description" rows="10" class = "form-control"></textarea><br>
 
 				<label for="privacy"><b>Privacy</b></label>
-				<select name="privacy">
+				<select name="privacy" class= "form-control" >
 					<option value="private">Private</option>
 					<option value="public" selected>Public</option>
 				</select><br>
 
 				<label for="number"><b>Max Number of Contributors</b></label>
-				<input type="number" name="points" min="1" max="100" step="1" value="5"><br>
+				<input class = "form-control" type="number" name="points" min="1" max="100" step="1" value="5"><br>
 
 			</div>
 
-			<button type="submit" class="btn btn-primary">Submit</button>
-			<label>
+			<button  ype="submit" class="btn btn-primary">Submit</button>
+			<label><br>
 				<input type="checkbox" checked="checked" name="takeme"> Take me to project page
-			</label>
+			</label><br>
 		</form>
-	</div>
-	<div style="position: absolute; top: 11rem; left:7rem">
-	<a class="btn btn-primary" href="#" onclick="document.getElementById('id03').style.display='block'" style="width:auto;">Create New Project</a>
 	</div>
 
 
@@ -93,15 +81,22 @@
 
     <section class="testimonials text-center bg-light">
       <div class="container">
-        <h2 class="mb-5">My Projects</h2>
+        <h2 class="mb-5">Projects</h2>
 		<div class="search-container">
 			<form action="/action_page.php">
-				<input type="text" placeholder="Find a Project" name="find_proj" size = "80">
-				<button type="submit"><i class="fa fa-search"></i></button>
+				<input type="text" class="search" placeholder="Search Project" name="search_proj" size = "10">
+				<button type="submit" class= "search"><i class="fa fa-search"></i></button>
 			</form>
+		</div></div>
 
+	<div>
+	<a class="btn btn-primary" href="#" onclick="document.getElementById('id03').style.display='block'" style="width:auto;">Create New Project</a></div>
 	</section>
-	
+<div class = "text-center"><br><br>
+<a class="btn btn-primary" href="#" onclick="document.getElementById('id03').style.display='block'" style="width:auto;">Private Projects</a>&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;
+
+<a class="btn btn-primary" href="#" onclick="document.getElementById('id03').style.display='block'" style="width:auto;">Public Projects</a>
+</div>
 	<section>
 	<div>
 		<p><br></p>
@@ -110,11 +105,11 @@
 	<div class="card-deck">
 		<div class="card">
 			<div class="card-header">
-			<h5 class="card-title">Example Project</h5>
+			<h5 class="card-title">Title of Project</h5>
 			</div>
 			<div class="card-body">
-				<p class="card-text">This project is an example</p>
-			<a href="thisproject.html" class="btn btn-primary">Try me I do something</a>
+				<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+			<a href="#" class="btn btn-primary">Go somewhere</a>
 			</div>
 			<div class="card-footer">
 				<small class="text-muted">Last updated 3 mins ago</small>
@@ -193,27 +188,21 @@
 	</div> 
     </section>
     <p><br></br></p>
-    <section align="center">
-    <div class="pagination" >
-  		<a href="#">&laquo;</a>
-  		<a href="#">1</a>
-  		<a class="active" href="#">2</a>
-  		<a href="#">3</a>
-  		<a href="#">4</a>
-  		<a href="#">5</a>
-  		<a href="#">6</a>
-  		<a href="#">&raquo;</a>
-	</div>
-
+		<section align="center"><h4>
+    		<div class="text-center " >
+  				<a href="#">&laquo;</a>
+  				&ensp;<a href="#">1</a>&ensp;
+  				<a class="active" href="#">2</a>&ensp;
+  				<a href="#">3</a>&ensp;
+  				<a href="#">4</a>&ensp;
+  				<a href="#">5</a>&ensp;
+  				<a href="#">6</a>&ensp;
+  				<a href="#">&raquo;</a>&ensp;
+			</div>	</h4>	
+		</div>
     </section>
+
 </div>
-
-
-
-
-	<p><br></br></p> 
-	
-
     <!-- Footer -->
     <footer class="footer bg-light">
       <div class="container">
