--- a/Report3/home-test/tasklist.html
+++ b/Report3/home-test/tasklist.html
@@ -8,54 +8,56 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Landing Page - Start Bootstrap Theme</title>
+    <title>ProPlan</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom fonts for this template -->
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="vendor/font-awesome/css/font-awesome-popup.css" rel="stylesheet" type="text/css">
     <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
 
     <!-- Custom styles for this template -->
     <link href="css/landing-page.min.css" rel="stylesheet">
+    <style type="text/css">
+      tab1 { padding-left: 49em; }
+      tab2 { padding-left: 50em; }
+    </style>
 
-
-
-    
   </head>
-  
+
   <body>
 
     <!-- Navigation -->
     <nav class="navbar navbar-light bg-light static-top">
       <div class="container">
-        <img class="img-fluid mb-2" width="50" height="50" src="img/proplanlogo.png" alt="">
+        <a class="icon" href="index.html"></a>
         <a class="navbar-brand" href="index.html">Home</a>
         <a class="navbar-brand" href="about.html">About</a>
         <a class="navbar-brand" href="projects.html">Projects</a>
         <a class="navbar-brand" href="faq.html">FAQ</a>
         <a class="navbar-brand" href="contact.html">Contact</a>
-        
-        <a class="btn btn-primary" href="#" onclick="document.getElementById('id01').style.display='block'">Sign In</a>
+        <a class="btn btn-primary" href="#" onclick="document.getElementById('id02').style.display='block'" style="width:auto;">Sign In</a>
       </div>
     </nav>
-	
-		    <div class="col-xl-0 mx-auto">
+  
+        <div class="col-xl-0 mx-auto">
             <img  width="100%" height="30" src="img/bg-masthead.jpg" alt="">
     </div>
-	
-  <ul class="breadcrumb">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="myprojects.html">My Projects</a></li>
-      <li><a href="thisproject.html">Project Title</a></li>
-      <li>Task List</li>
-  </ul>
 
-    <div style="position: absolute; top: 11rem; left:7rem">
-      <a class="btn btn-primary" href="#" onclick="document.getElementById('id04').style.display='block'" style="width:auto;">Create New Task</a>
-    </div>
+
+          <div class="container">
+          <br><h2 class="mb-5">Project Title</h2>
+          <h7 class="mb-5">Text with the description of the project sadsadsadsadsa ad s dsa d sad sa d sad sa d sads ad sa d sad sa dsa sa</h7>
+          <br><br>
+
+  <div>
+    <a class="btn btn-primary" href="#" onclick="document.getElementById('id03').style.display='block'" style="width:auto;">Project</a>&ensp;&ensp;
+    <a class="btn btn-primary" href="#" onclick="document.getElementById('id03').style.display='block'" style="width:auto;">Forum</a>
+  </div><br><br>
+	
 
 
   <div id="id04" class="modal" align="center">
@@ -89,69 +91,54 @@
     </form>
   </div>
 
-	<div style="position: absolute; top: 11rem; right:7rem;">
-		<a class="btn btn-primary" href="#" .style.display='block'" style="width:auto;">Forum</a>
-	</div>
-
-    <section class="testimonials text-lg-left bg-light">
-     	<div class="container">
-        	<h2 class="mb-5">Project Title</h2>
-        	<h5 class="mb-5">Text with the description of the project</h5>
-        	<br><br><br>
-
-        	<h4 class="mb-5">Task List</h4>
+<div align="text-center">
+<h2>Task List</h2><br>
+<a class="btn btn-primary" href="#" onclick="document.getElementById('id04').style.display='block'" style="width:auto;">Create New Task</a>
+</div><br>
 
 			<div class="card-deck">
-        <div class="card border-dark mb-3" style="max-width: 18rem;">
-          <div class="card-header bg-transparent border-dark">Task Available for choosing</div>
-          <div class="card-body text-dark">
-            <h5 class="card-title">Title of not yet started task</h5>
-            <p class="card-text">Task description</p>
-          </div>
-          <div class="card-footer bg-transparent border-success">To do time: dd/mm/yyyy</div>
-      </div>
-        <div class="card border-warning mb-3" style="max-width: 18rem;">
-          <div class="card-header bg-transparent border-warning">Task In Works By: USER</div>
-          <div class="card-body text-warning">
-            <h5 class="card-title">Title of in progress task</h5>
-            <p class="card-text">Task description</p>
-          </div>
-          <div class="card-footer bg-transparent border-success">To do time: dd/mm/yyyy</div>
-      </div>
-        <div class="card border-success mb-3" style="max-width: 18rem;">
-          <div class="card-header bg-transparent border-success">Task Completed By: USER</div>
-          <div class="card-body text-success">
-            <h5 class="card-title">Title of completed task</h5>
-            <p class="card-text">Task description</p>
-          </div>
-          <div class="card-footer bg-transparent border-success">Completed at: dd/mm/yyyy</div>
-      </div>
-
+				<div class="card text-white bg-danger mb-3">
+						<div class="card-header">In works by NAME<tab1></tab1><a class="btn btn-primary" href="#" onclick="document.getElementById('id04').style.display='block'" style="width:auto;">TAKE THIS TASK</a></div>
+						<div class="card-body">
+						<h5 class="card-title">Title of task</h5>
+						<p class="card-text">Descritpion of task</p>
+						</div>
+				</div>
+			</div><br>
+			<div class="card-deck">
+				<div class="card text-white bg-success mb-3">
+						<div class="card-header">No one in charge<tab2>TAKE THIS TASK</tab2></div>
+						<div class="card-body">
+						<h5 class="card-title">Title of task</h5>
+						<p class="card-text">Descritpion of task</p>
+						</div>
+				</div>
+			</div><br>
+			<div class="card-deck">
+				<div class="card text-white bg-dark mb-3">
+						<div class="card-header">Completed by NAME</div>
+						<div class="card-body">
+						<h5 class="card-title">Title Of task</h5>
+						<p class="card-text">Descritpion of task</p>
+            <div class="card-footer">Date of Completion: 12/03/2018</div>
+						</div>
+				</div>
 			</div><br>	
-		<section align="center">
-    		<div class="pagination" >
-  				<a href="#">&laquo;</a>
-  				<a href="#">1</a>
-  				<a class="active" href="#">2</a>
-  				<a href="#">3</a>
-  				<a href="#">4</a>
-  				<a href="#">5</a>
-  				<a href="#">6</a>
-  				<a href="#">&raquo;</a>
-			</div>		
-		</div>
+    <section align="center"><h4>
+        <div class="text-center " >
+          <a href="#">&laquo;</a>
+          &ensp;<a href="#">1</a>&ensp;
+          <a class="active" href="#">2</a>&ensp;
+          <a href="#">3</a>&ensp;
+          <a href="#">4</a>&ensp;
+          <a href="#">5</a>&ensp;
+          <a href="#">6</a>&ensp;
+          <a href="#">&raquo;</a>&ensp;
+      </div>  </h4> 
+    </div>
     </section>
-    <p><br></br></p>
+
 </div>
-</section>
-</div>
-
-
-
-
-	<p><br></br></p> 
-	
-
     <!-- Footer -->
     <footer class="footer bg-light">
       <div class="container">
@@ -180,26 +167,7 @@
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/jquery/popup.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
 </body>
 
 </html>
-<!--Forum Thread Creator
-  <div id="id05" class="modal" align="center">
 
-    <form class="modal-content animate" action="/action_page3.php">
-      <div class="imgcontainer">
-        <span onclick="document.getElementById('id05').style.display='none'" class="close" title="Close Modal">&times;
-        </span>
-        </div>
-
-      <div class="container">
-        <label for="title"><b>Forum Thread Title</b></label>
-        <input type="text" placeholder="Enter Forum Thread Title" name="title" required><br>
-
-        <label for="pdis"><b>Post</b></label>
-        <textarea placeholder="Enter Text" name="post" rows="10" cols="40"></textarea><br>
-
-      <button type="submit" class="btn btn-primary">Submit</button>
-    </form>
-  </div> -->
