--- a/Report3/home-test/contact.html
+++ b/Report3/home-test/contact.html
@@ -365,7 +365,7 @@
  <!-- The Modal -->
 <div id="id02" class="modal">
   
-  <form class="modal-content animate" action="/action_page2.php">
+  <form class="modal-content animate" action="aut_index.html">
     <div class="imgcontainer">
       <span onclick="document.getElementById('id02').style.display='none'" class="close" title="Close Modal">&times;</span>
     </div>
