--- a/Report3/home-test/aut_index.html
+++ b/Report3/home-test/aut_index.html
@@ -29,7 +29,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-light bg-light static-top">
       <div class="container">
-        <a class="icon" href="index.html"></a>
+        <a class="icon" href="aut_index.html"></a>
         <a class="navbar-brand" href="aut_index.html">Home</a>
         <a class="navbar-brand" href="aut_about.html">About</a>
         <a class="navbar-brand" href="aut_projects.html">Projects</a>
@@ -42,7 +42,7 @@
           </button>
           <div class="dropdown-menu">
             <a class="dropdown-item" href="aut_editprofile.html">Edit Profile</a>
-            <a class="dropdown-item" href="#">My Projects</a>
+            <a class="dropdown-item" href="aut_projects.html">My Projects</a>
             <a class="dropdown-item" href="#">Project Invites</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="index.html">Sign Out</a>
@@ -456,21 +456,21 @@
       <div class="container-fluid p-0">
         <div class="row no-gutters">
 
-          <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/bg-showcase-1.jpg');"></div>
+          <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/bg-showcase-1.png');"></div>
           <div class="col-lg-6 order-lg-1 my-auto showcase-text">
             <h2>A small sample</h2>
             <p class="lead mb-0">This is an example of a ProPlan project. When creating you can choose the project's name, invite members and set up the privacy settings. This means your project can be visualized only for invited people or anyone authenticated in the plataform.</p>
           </div>
         </div>
         <div class="row no-gutters">
-          <div class="col-lg-6 text-white showcase-img" style="background-image: url('img/bg-showcase-2.jpg');"></div>
+          <div class="col-lg-6 text-white showcase-img" style="background-image: url('img/bg-showcase-2.png');"></div>
           <div class="col-lg-6 my-auto showcase-text">
             <h2>Features</h2>
             <p class="lead mb-0">Add tasks, assign for those you are able to do and give them a deadline. Don't worry about missing any changes of the project, the coordinator will be notified.</p>
           </div>
         </div>
         <div class="row no-gutters">
-          <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/bg-showcase-3.jpg');"></div>
+          <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/bg-showcase-3.png');"></div>
           <div class="col-lg-6 order-lg-1 my-auto showcase-text">
             <h2>Easy transmission</h2>
             <p class="lead mb-0">If comunication is needed you can count on a discussion forum for general info or focused in a especific subject.</p>
