--- a/Report3/home-test/contact.html
+++ b/Report3/home-test/contact.html
@@ -393,7 +393,7 @@
     
     <!-- Contact Information -->
 
-    <section class="testimonials text-center bg-light">
+    <section class="testimonials bg-light">
       
 <div class="container">
 
@@ -404,9 +404,9 @@
 
                 <div class="col-lg-12 col-lg-offset-2">
 
-                    <h1>Any questions? Contact us!</h1>
+                    <h1 class="text-center">Any questions? Contact us!</h1>
 
-                    <p class="lead">Our team is happy to answer your questions!</p>
+                    <p class="lead text-center">Our team is happy to answer your questions!</p><br>
 
 
                     <form id="contact-form" method="post" action="contact.php" role="form">
@@ -472,13 +472,13 @@
 
             </div> <!-- /.row-->
 
-        </div> <!-- /.container-->
+        </div> </section> <!-- /.container-->
 
         <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
         <script src="validator.js"></script>
         <script src="contact.js"></script>
-    </section>
+   
 
     <!-- Call to Action -->
     <section class="call-to-action text-white text-center">
