--- a/Report3/home-test/myprojects.html
+++ b/Report3/home-test/myprojects.html
@@ -21,7 +21,10 @@
 
     <!-- Custom styles for this template -->
     <link href="css/landing-page.min.css" rel="stylesheet">
+     <style type="text/css">
+      tab1 { padding-left: 5em; }
 
+    </style>
   </head>
   
   <body>
@@ -109,7 +112,7 @@
 			</div>
 			<div class="card-body">
 				<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-			<a href="#" class="btn btn-primary">Go somewhere</a>
+			<a href="#" class="btn btn-primary">Go somewhere</a><tab1></tab1><a class="btn btn-success" href="#" onclick="document.getElementById('id04').style.display='block'" style="width:auto;">JOIN</a>
 			</div>
 			<div class="card-footer">
 				<small class="text-muted">Last updated 3 mins ago</small>
@@ -121,7 +124,7 @@
 			</div>
 			<div class="card-body">
 				<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-			<a href="#" class="btn btn-primary">Go somewhere</a>
+			<a href="#" class="btn btn-primary">Go somewhere</a><tab1></tab1><a class="btn btn-success" href="#" onclick="document.getElementById('id04').style.display='block'" style="width:auto;">JOIN</a>
 			</div>
 			<div class="card-footer">
 				<small class="text-muted">Last updated 3 mins ago</small>
@@ -133,7 +136,7 @@
 			</div>
 			<div class="card-body">
 				<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-			<a href="#" class="btn btn-primary">Go somewhere</a>
+			<a href="#" class="btn btn-primary">Go somewhere</a><tab1></tab1><a class="btn btn-success" href="#" onclick="document.getElementById('id04').style.display='block'" style="width:auto;">JOIN</a>
 			</div>
 			<div class="card-footer">
 				<small class="text-muted">Last updated 3 mins ago</small>
@@ -155,7 +158,7 @@
 			</div>
 			<div class="card-body">
 				<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-			<a href="#" class="btn btn-primary">Go somewhere</a>
+			<a href="#" class="btn btn-primary">Go somewhere</a><tab1></tab1><a class="btn btn-success" href="#" onclick="document.getElementById('id04').style.display='block'" style="width:auto;">JOIN</a>
 			</div>
 			<div class="card-footer">
 				<small class="text-muted">Last updated 3 mins ago</small>
@@ -167,7 +170,7 @@
 			</div>
 			<div class="card-body">
 				<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-			<a href="#" class="btn btn-primary">Go somewhere</a>
+			<a href="#" class="btn btn-primary">Go somewhere</a><tab1></tab1><a class="btn btn-success" href="#" onclick="document.getElementById('id04').style.display='block'" style="width:auto;">JOIN</a>
 			</div>
 			<div class="card-footer">
 				<small class="text-muted">Last updated 3 mins ago</small>
@@ -179,7 +182,7 @@
 			</div>
 			<div class="card-body">
 				<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-			<a href="#" class="btn btn-primary">Go somewhere</a>
+			<a href="#" class="btn btn-primary">Go somewhere</a><tab1></tab1><a class="btn btn-success" href="#" onclick="document.getElementById('id04').style.display='block'" style="width:auto;">JOIN</a>
 			</div>
 			<div class="card-footer">
 				<small class="text-muted">Last updated 3 mins ago</small>
