--- a/Report3/home-test/aut_about.html
+++ b/Report3/home-test/aut_about.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Landing Page - Start Bootstrap Theme</title>
+    <title>ProPlan</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -42,7 +42,7 @@
           </button>
           <div class="dropdown-menu">
             <a class="dropdown-item" href="aut_editprofile.html">Edit Profile</a>
-            <a class="dropdown-item" href="#">My Projects</a>
+            <a class="dropdown-item" href="aut_projects.html">My Projects</a>
             <a class="dropdown-item" href="#">Project Invites</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="index.html">Sign Out</a>
@@ -445,23 +445,9 @@
     </section>
 
     <!-- Call to Action -->
-    <section class="call-to-action text-white text-center">
-      <div class="overlay"></div>
-      <div class="container">
-        <div class="row">
-          <div class="col-xl-9 mx-auto">
-            <h2 class="mb-4">Ready to get started? Sign up now!</h2>
-          </div>
-          <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
-              <div class="form-row">
-                <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
-                  <button type="submit" class="btn btn-block btn-lg btn-primary" onclick="document.getElementById('id01').style.display='block'">Sign up for ProPlan!</button>  
-                 </div>
-              </div>
-          </div>
-        </div>
-      </div>
-    </section>
+        <div class="col-xl-0 mx-auto">
+            <img  width="100%" height="30" src="img/bg-masthead.jpg" alt="">
+    </div>
 
     <!-- Footer -->
     <footer class="footer bg-light">
