--- a/Report3/home-test/aut_forum.html
+++ b/Report3/home-test/aut_forum.html
@@ -8,43 +8,44 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Landing Page - Start Bootstrap Theme</title>
+    <title>ProPlan</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom fonts for this template -->
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="vendor/font-awesome/css/font-awesome-popup.css" rel="stylesheet" type="text/css">
     <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
 
     <!-- Custom styles for this template -->
     <link href="css/landing-page.min.css" rel="stylesheet">
+    <style type="text/css">
+      tab1 { padding-left: 49em; }
+      tab2 { padding-left: 50em; }
+    </style>
 
-
-
-    
   </head>
-  
+
   <body>
 
     <!-- Navigation -->
     <nav class="navbar navbar-light bg-light static-top">
       <div class="container">
-        <img class="img-fluid mb-2" width="50" height="50" src="img/proplanlogo.png" alt="">
+        <a class="icon" href="aut_index.html"></a>
         <a class="navbar-brand" href="aut_index.html">Home</a>
         <a class="navbar-brand" href="aut_about.html">About</a>
         <a class="navbar-brand" href="aut_projects.html">Projects</a>
         <a class="navbar-brand" href="aut_faq.html">FAQ</a>
         <a class="navbar-brand" href="aut_contact.html">Contact</a>
-        
-       <div class="btn-group">
+        <div class="btn-group">
           <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Username
           </button>
           <div class="dropdown-menu">
             <a class="dropdown-item" href="aut_editprofile.html">Edit Profile</a>
-            <a class="dropdown-item" href="#">My Projects</a>
+            <a class="dropdown-item" href="aut_projects.html">My Projects</a>
             <a class="dropdown-item" href="#">Project Invites</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="index.html">Sign Out</a>
@@ -52,21 +53,19 @@
         </div>
       </div>
     </nav>
-	
-		    <div class="col-xl-0 mx-auto">
+  
+        <div class="col-xl-0 mx-auto">
             <img  width="100%" height="30" src="img/bg-masthead.jpg" alt="">
     </div>
-	
-  <ul class="breadcrumb">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="myprojects.html">My Projects</a></li>
-      <li><a href="thisproject.html">Project Title</a></li>
-      <li>Forum</li>
-  </ul>
+          <div class="container">
+          <br><h2 class="mb-5">Project Title</h2>
+          <h7 class="mb-5">Text with the description of the project sadsadsadsadsa ad s dsa d sad sa d sad sa d sads ad sa d sad sa dsa sa</h7>
+          <br><br>
 
-    <div style="position: absolute; top: 11rem; left:7rem">
-      <a class="btn btn-primary" href="#" onclick="document.getElementById('id05').style.display='block'" style="width:auto;">Create New Forum Thread</a>
-    </div>
+  <div>
+    <a class="btn btn-primary" href="aut_thisproject.html" onclick="document.getElementById('id03').style.display='block'" style="width:auto;">Project</a>&ensp;&ensp;
+    <a class="btn btn-primary" href="href="tasklist.html" onclick="document.getElementById('id03').style.display='block'" style="width:auto;">Tasks</a>
+  </div><br><br>
 
   <div id="id05" class="modal" align="center">
 
@@ -87,17 +86,15 @@
     </div>
     </form>
   </div>
-  
-	<div style="position: absolute; top: 11rem; right:7rem;">
-		<a class="btn btn-primary" href="tasklist.html" .style.display='block'" style="width:auto;">Tasks</a>
-	</div>
-
-        <section class="testimonials text-center bg-light" style="padding-bottom:1rem">
-      <div class="container">
-        <h2 class="mb-5">Project Forums</h2>
+ 
   </section>
   
   <section>
+
+    <div align="text-center">
+<h2>Forum Threads</h2><br>
+<a class="btn btn-primary" href="#" onclick="document.getElementById('id05').style.display='block'" style="width:auto;">Create New Forum Thread</a>
+</div><br>
   <div>
     <p><br></p>
   </div>
@@ -188,38 +185,26 @@
   </div> 
     </section>
     <p><br></br></p>
-    <section align="center">
-    <div class="pagination" >
-      <a href="#">&laquo;</a>
-      <a href="#">1</a>
-      <a class="active" href="#">2</a>
-      <a href="#">3</a>
-      <a href="#">4</a>
-      <a href="#">5</a>
-      <a href="#">6</a>
-      <a href="#">&raquo;</a>
-  </div>
-  
-  <a href="#" class="btn btn-primary" style="position:absolute;bottom:1em;right:1em">New Forum</a>
 
+   <br> 
+    <section align="center"><h4>
+        <div class="text-center " >
+          <a href="#">&laquo;</a>
+          &ensp;<a href="#">1</a>&ensp;
+          <a class="active" href="#">2</a>&ensp;
+          <a href="#">3</a>&ensp;
+          <a href="#">4</a>&ensp;
+          <a href="#">5</a>&ensp;
+          <a href="#">6</a>&ensp;
+          <a href="#">&raquo;</a>&ensp;
+      </div>  </h4> 
+    </div>
     </section>
+
 </div>
-
-
-
-
-  <p><br></br></p> 
-  
-  <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-
-
-
-
-	<p><br></br></p> 
-	
-
+        <div class="col-xl-0 mx-auto">
+            <img  width="100%" height="30" src="img/bg-masthead.jpg" alt="">
+    </div>
     <!-- Footer -->
     <footer class="footer bg-light">
       <div class="container">
@@ -242,13 +227,14 @@
         </div>
       </div>
     </footer>
-	
+  
 
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/jquery/popup.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script>
+
+        <script>
   function openNav() {
       document.getElementById("myNav").style.width = "100%";
   }
@@ -258,6 +244,8 @@
   }
 
 </script>
+
 </body>
 
 </html>
+
