--- a/Report3/home-test/aut_tasklist.html
+++ b/Report3/home-test/aut_tasklist.html
@@ -45,7 +45,7 @@
           </button>
           <div class="dropdown-menu">
             <a class="dropdown-item" href="aut_editprofile.html">Edit Profile</a>
-            <a class="dropdown-item" href="#">My Projects</a>
+            <a class="dropdown-item" href="aut_projects.html">My Projects</a>
             <a class="dropdown-item" href="#">Project Invites</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="index.html">Sign Out</a>
@@ -84,17 +84,17 @@
         <input type="text" placeholder="Enter Task Title" name="title" required><br>
 
         <label for="pdis"><b>Task Description</b></label>
-        <textarea placeholder="Enter Task Description" name="description" rows="10" cols="20"></textarea><br>
+        <textarea placeholder="Enter Task Description" name="description" rows="10" class = "form-control"></textarea><br>
 
         <label for="priority"><b>Priority</b></label>
-        <select name="priority">
+        <select name="priority" class = "form-control">
           <option value="priority">High</option>
           <option value="priority">Medium</option>
           <option value="priority">Low</option>
         </select><br>
 
         <label for="date"><b>Date for task</b></label>
-        <input type="date" id="bday" name="bday">
+        <input type="date" id="bday" name="bday" class = "form-control" required>
 
       </div>
 
@@ -118,7 +118,7 @@
 			</div><br>
 			<div class="card-deck">
 				<div class="card text-white bg-success mb-3">
-						<div class="card-header">No one in charge<tab2>TAKE THIS TASK</tab2></div>
+						<div class="card-header">No one in charge<tab2></tab2><a class="btn btn-primary" href="#" onclick="document.getElementById('id04').style.display='block'" style="width:auto;">TAKE THIS TASK</a></div>
 						<div class="card-body">
 						<h5 class="card-title">Title of task</h5>
 						<p class="card-text">Descritpion of task</p>
@@ -150,6 +150,9 @@
     </section>
 
 </div>
+        <div class="col-xl-0 mx-auto">
+            <img  width="100%" height="30" src="img/bg-masthead.jpg" alt="">
+    </div>
     <!-- Footer -->
     <footer class="footer bg-light">
       <div class="container">
