--- a/Report3/home-test/aut_thisproject.html
+++ b/Report3/home-test/aut_thisproject.html
@@ -41,7 +41,7 @@
           </button>
           <div class="dropdown-menu">
             <a class="dropdown-item" href="aut_editprofile.html">Edit Profile</a>
-            <a class="dropdown-item" href="#">My Projects</a>
+            <a class="dropdown-item" href="aut_projects.html">My Projects</a>
             <a class="dropdown-item" href="#">Project Invites</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="index.html">Sign Out</a>
@@ -108,6 +108,10 @@
     </section>
 
 </div>
+
+        <div class="col-xl-0 mx-auto">
+            <img  width="100%" height="30" src="img/bg-masthead.jpg" alt="">
+    </div>
 
     <!-- Footer -->
     <footer class="footer bg-light">
